# hello-jetbrains

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
cmake/: CompileOptions.cmake  Dependencies.cmake  Development.cmake  Sanitize.cmake
lib/tiny-graphics/: CMakeLists.txt  glx_context.cpp  glx_window.cpp  glx_window.hpp
lib/tiny-graphics/tiny-gl-wrapper/: CMakeLists.txt  gl_impl.hpp  program.hpp
lib/tiny-graphics/tiny-opengl/: color.hpp  shader.hpp
lib/tiny-graphics/tiny-x-wrapper/: display.cpp
lib/tiny-graphics/tiny-xlib/: CMakeLists.txt  display.hpp  shapes.hpp
lib/wheels/: CMakeLists.txt  util.hpp  vector.hpp  vector.ipp
src/: CMakeLists.txt  main.cpp  simple_triangle.cpp  simple_triangle.hpp  simple_window.cpp  simple_window.hpp
src/shaders/: standard.frag  with_offset.vert
src/tiny-gl-wrapper/: CMakeLists.txt  gl_impl.cpp  program.cpp  program.hpp  shader.cpp  shader.hpp
src/tiny-graphics/: CMakeLists.txt  glx_context.cpp  glx_window.cpp  glx_window.hpp  tiny_graphics.hpp  window.cpp  window.hpp
src/tiny-graphics/tiny-opengl/: CMakeLists.txt  color.hpp  gl_impl.cpp  gl_impl.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp
src/tiny-graphics/tiny-xlib/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  display.cpp  display.hpp  glx_context.cpp  glx_context.hpp  visual.cpp  visual.hpp  window.cpp  window.hpp
src/tiny-x-wrapper/: CMakeLists.txt  dispatcher.cpp  dispatcher.hpp  display.cpp  display.hpp  glx_context.cpp  glx_context.hpp  glx_window.cpp  glx_window.hpp  graphic_window.hpp  shapes.hpp  visual.cpp  window.cpp  window.hpp
src/wheels/: CMakeLists.txt  assert.hpp  log.cpp  log.hpp  util.hpp  vector.hpp
